--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-primer
 title: dzirtusss (aka Sergey Tarasov)
 description: just a personal blog
-url: "http://dzirtusss.github.io"
+url: "https://dzirtusss.com"
 author: dzitusss
 logo: /assets/header.jpg
 
